# tflite-aoa-positioning-on-riscv

./: Cargo.toml  Justfile  LICENSE  README.md  memory.x
.cargo/: config.toml
src/: error.rs  main.rs
