[package]
edition = "2021"
name = "rust-proto-4"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned = "0.4.0"
fs-err = "2.7.0"
log = "0.4.14"
simple_logger = "2.1.0"
#tflite = "0.9.6"
tfmicro = {path = "../tfmicro"}
