[package]
edition = "2021"
name = "rust-proto-4"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned = "0.4.0"
log = "0.4.14"
#panic-halt = "0.2.0"
riscv-rt = "0.8.1"
tfmicro = {path = "../tfmicro"}
uart_16550 = {version = "0.2.16", default-features = false, features = ["stable"]}
