[package]
edition = "2021"
name = "inference"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned = "0.4.0"
log = "0.4.14"
riscv-rt = "0.8.1"
tfmicro = {git = "https://github.com/hegza/tfmicro", branch = "riscv1" }
uart_16550 = {version = "0.2.16", default-features = false, features = ["stable"]}
